--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,19 @@ hr {
     margin-left: 20px;
     margin-top: 5px;
 }
+.button {
+    margin-left: 10px;
+}
+.button2 {
+    margin-left: 100px;
+}
+.out {
+    width: 70px;
+    margin-left: 0;
+    margin-right: 0;
+    /* margin-top: 50px; */
+}
+.out1 {
+    margin-top: 0;
+    margin-left: 163px;
+}
